@@ -154,6 +154,8 @@ Release 0.9.1
   access resources that require full registration
 - add initial toolbox version; enable isXHTML setting as this will be
   supported by the toolbox
+- add ZMLayout::getProductTemplate() and ZMProducts::isQuantityAvailable() and
+  use
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
